@@ -22,6 +22,8 @@ PHP                                                                        NEWS
 - Fixed bug #35759 (mysqli_stmt_bind_result() makes huge allocation when
   column empty). (Andrey)
 - Fixed bug #35751 (using date with a timestamp makes httpd segfault). (Derick)
+- Fixed bug #35669 (imap_mail_compose() crashes with 
+  multipart-multiboundary-email). (Ilia)
 - Fixed bug #35517 (mysql_stmt_fetch returns NULL on data truncation). (Georg)
 - Fixed bug #35377 (PDO_SQLITE: undefined reference to "fdatasync").
   (Nuno, Jani)
